--- a/CooperationApp/Views/Cell/DateCell.xib
+++ b/CooperationApp/Views/Cell/DateCell.xib
@@ -3,30 +3,54 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="DateCell" id="D2l-cy-JXO" customClass="DateCollectionViewCell" customModule="CooperationApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DateCell" id="D2l-cy-JXO" customClass="DateCollectionViewCell" customModule="CooperationApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="262" height="191"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jdw-rT-G6M">
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="DateCell" insetsLayoutMarginsFromSafeArea="NO" id="jdw-rT-G6M">
                 <rect key="frame" x="0.0" y="0.0" width="262" height="191"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j4x-4P-bb3">
-                        <rect key="frame" x="110" y="85" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qcX-MT-fmn">
+                        <rect key="frame" x="0.0" y="0.0" width="262" height="191"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAn-4m-nWJ">
+                                <rect key="frame" x="110" y="85" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="eAn-4m-nWJ" firstAttribute="centerY" secondItem="qcX-MT-fmn" secondAttribute="centerY" id="10M-79-Vvw"/>
+                            <constraint firstItem="eAn-4m-nWJ" firstAttribute="centerX" secondItem="qcX-MT-fmn" secondAttribute="centerX" id="Trn-kE-FPh"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="qcX-MT-fmn" firstAttribute="top" secondItem="jdw-rT-G6M" secondAttribute="top" id="Pjq-U6-YqV"/>
+                    <constraint firstAttribute="bottom" secondItem="qcX-MT-fmn" secondAttribute="bottom" id="S0l-hA-soK"/>
+                    <constraint firstItem="qcX-MT-fmn" firstAttribute="leading" secondItem="jdw-rT-G6M" secondAttribute="leading" id="fto-nj-1D2"/>
+                    <constraint firstAttribute="trailing" secondItem="qcX-MT-fmn" secondAttribute="trailing" id="xlH-Fu-rEx"/>
+                </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="262" height="191"/>
+            <connections>
+                <outlet property="dateLabel" destination="eAn-4m-nWJ" id="kZo-yb-qh7"/>
+            </connections>
             <point key="canvasLocation" x="249" y="156"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
