--- a/CooperationApp/Views/SecondTabbar.storyboard
+++ b/CooperationApp/Views/SecondTabbar.storyboard
@@ -82,25 +82,26 @@
                                 </subviews>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="S0X-Qd-rlZ">
-                                <rect key="frame" x="15" y="145.5" width="384" height="128"/>
+                                <rect key="frame" x="15" y="140.5" width="384" height="128"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="iWE-2E-LQ3"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3aU-h6-aby">
-                                    <size key="itemSize" width="128" height="128"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3aU-h6-aby">
+                                    <size key="itemSize" width="70" height="76"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bed-hL-y4S">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DateCell" id="bed-hL-y4S">
+                                        <rect key="frame" x="0.0" y="0.0" width="70" height="76"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1AS-zv-FYr">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jno-rd-3gv">
+                                            <rect key="frame" x="0.0" y="0.0" width="70" height="76"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="70" height="76"/>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -108,13 +109,13 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="S0X-Qd-rlZ" firstAttribute="top" secondItem="lzD-jb-PLt" secondAttribute="bottom" constant="15" id="1We-aS-Ka6"/>
+                            <constraint firstItem="S0X-Qd-rlZ" firstAttribute="top" secondItem="lzD-jb-PLt" secondAttribute="bottom" constant="10" id="1We-aS-Ka6"/>
+                            <constraint firstItem="S0X-Qd-rlZ" firstAttribute="trailing" secondItem="lzD-jb-PLt" secondAttribute="trailing" id="8FK-h3-lux"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="lzD-jb-PLt" secondAttribute="trailing" constant="15" id="Bb7-cg-jih"/>
                             <constraint firstItem="lzD-jb-PLt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="ESU-eh-Qyj"/>
                             <constraint firstItem="2pe-Tf-eXd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="15" id="EYV-iT-kwm"/>
                             <constraint firstItem="lzD-jb-PLt" firstAttribute="top" secondItem="2pe-Tf-eXd" secondAttribute="bottom" constant="20" id="R8Q-UJ-LR4"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="S0X-Qd-rlZ" secondAttribute="trailing" constant="15" id="VEw-L6-1mT"/>
-                            <constraint firstItem="S0X-Qd-rlZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="aZB-Tf-6lM"/>
+                            <constraint firstItem="S0X-Qd-rlZ" firstAttribute="leading" secondItem="lzD-jb-PLt" secondAttribute="leading" id="f8d-YU-BtT"/>
                             <constraint firstItem="2pe-Tf-eXd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="ls5-o7-bYw"/>
                         </constraints>
                     </view>
@@ -124,11 +125,12 @@
                         <outlet property="calendarHeight" destination="iWE-2E-LQ3" id="UXE-VN-GYS"/>
                         <outlet property="calendarView" destination="S0X-Qd-rlZ" id="ade-KU-Hul"/>
                         <outlet property="dateStackView" destination="2pe-Tf-eXd" id="ZNU-9b-EKj"/>
+                        <outlet property="weekStackView" destination="lzD-jb-PLt" id="Vzy-iR-bgE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="525" y="63"/>
+            <point key="canvasLocation" x="524.63768115942037" y="62.946428571428569"/>
         </scene>
     </scenes>
     <resources>
