--- a/CooperationApp/Views/SecondTabbar.storyboard
+++ b/CooperationApp/Views/SecondTabbar.storyboard
@@ -82,10 +82,10 @@
                                 </subviews>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="S0X-Qd-rlZ">
-                                <rect key="frame" x="15" y="140.5" width="384" height="128"/>
+                                <rect key="frame" x="15" y="140.5" width="384" height="308"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="iWE-2E-LQ3"/>
+                                    <constraint firstAttribute="height" constant="308" id="CdC-3K-ksC"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3aU-h6-aby">
                                     <size key="itemSize" width="70" height="76"/>
@@ -122,8 +122,8 @@
                     <tabBarItem key="tabBarItem" title="" image="calendar" catalog="system" id="VMU-S3-f07"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="calendarHeight" destination="iWE-2E-LQ3" id="UXE-VN-GYS"/>
                         <outlet property="calendarView" destination="S0X-Qd-rlZ" id="ade-KU-Hul"/>
+                        <outlet property="dateLabel" destination="fQv-QX-aHZ" id="tab-k5-T89"/>
                         <outlet property="dateStackView" destination="2pe-Tf-eXd" id="ZNU-9b-EKj"/>
                         <outlet property="weekStackView" destination="lzD-jb-PLt" id="Vzy-iR-bgE"/>
                     </connections>
