--- a/CooperationApp/Views/SecondTabbar.storyboard
+++ b/CooperationApp/Views/SecondTabbar.storyboard
@@ -132,10 +132,20 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BrD-3k-A3i">
+                                <rect key="frame" x="328.33333333333331" y="58.999999999999993" width="46.666666666666686" height="30.666666666666664"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="line.3.horizontal" catalog="system"/>
+                                <connections>
+                                    <action selector="showProjectIdPopupButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="jCY-Y4-G2s"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="BrD-3k-A3i" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="15" id="1Lw-oj-1Mz"/>
                             <constraint firstItem="S0X-Qd-rlZ" firstAttribute="top" secondItem="lzD-jb-PLt" secondAttribute="bottom" constant="10" id="1We-aS-Ka6"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="P0e-rO-ffs" secondAttribute="bottom" id="21l-fq-xBq"/>
                             <constraint firstItem="S0X-Qd-rlZ" firstAttribute="trailing" secondItem="lzD-jb-PLt" secondAttribute="trailing" id="8FK-h3-lux"/>
@@ -143,6 +153,7 @@
                             <constraint firstItem="GT3-qp-sy5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Dzo-O8-Tz8"/>
                             <constraint firstItem="lzD-jb-PLt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="ESU-eh-Qyj"/>
                             <constraint firstItem="2pe-Tf-eXd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="15" id="EYV-iT-kwm"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="BrD-3k-A3i" secondAttribute="trailing" constant="15" id="FTI-WB-bzc"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="GT3-qp-sy5" secondAttribute="trailing" id="PAp-QT-kIT"/>
                             <constraint firstItem="lzD-jb-PLt" firstAttribute="top" secondItem="2pe-Tf-eXd" secondAttribute="bottom" constant="20" id="R8Q-UJ-LR4"/>
                             <constraint firstItem="S0X-Qd-rlZ" firstAttribute="leading" secondItem="lzD-jb-PLt" secondAttribute="leading" id="f8d-YU-BtT"/>
@@ -172,6 +183,7 @@
     <resources>
         <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="chevron.down" catalog="system" width="128" height="72"/>
+        <image name="line.3.horizontal" catalog="system" width="128" height="64"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
