--- a/CooperationApp/Views/Popup/ProjectIdPopup.xib
+++ b/CooperationApp/Views/Popup/ProjectIdPopup.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProjectIDPopupViewController" customModule="CooperationApp" customModuleProvider="target">
             <connections>
-                <outlet property="backGroundView" destination="iN0-l3-epB" id="ptS-sq-iPo"/>
+                <outlet property="backGroundView" destination="iN0-l3-epB" id="0XP-g8-mYi"/>
                 <outlet property="popUpView" destination="hh4-JA-Pxa" id="XuG-yx-8bW"/>
                 <outlet property="popUpViewHeight" destination="512-Fy-xy3" id="ZZ0-l6-kMj"/>
                 <outlet property="projectIDCollectionView" destination="xG9-rQ-BPU" id="SxW-Lk-Nkn"/>
@@ -28,7 +28,7 @@
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xG9-rQ-BPU">
                             <rect key="frame" x="10" y="0.0" width="220" height="250"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Rws-RH-5nl">
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vN4-dY-u8C">
                                 <size key="itemSize" width="128" height="128"/>
                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
